# quint

./: .dockerignore  .env.yaml  .envrc  .gitignore  .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  Dockerfile  Dockerfile.jax  LICENSE  Makefile  Pipfile  README.md  empty.flac  env.sample  fast.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml  pythonpackage.yml  sync-space.yml
benchmarks/chunking/: corpus.json  run_benchmark.py
frontend/: app.py
huggingface-space/: README.md  app.py  requirements.txt
notebooks/: 210 transcripts.rar  Bert_topic.ipynb  Change point detection.ipynb  Chunk_by_hand.ipynb  Chunking text into paragraphs V3 - real-time on CPU.ipynb  Chunking text into paragraphs.ipynb  Chunking.ipynb  Creating chapters from paragraphs.ipynb  Deploy_gpu_instance.ipynb  Get best sentence.ipynb  Jax_Chunking_IN_DEV.ipynb  Kaldi.ipynb  LDA.ipynb  PodcastIndex.ipynb  Rank Sentences SPACY.ipynb  Rank_Sentences_NLTK.ipynb  Rank_Sentences_NLTK_copy.ipynb  Scraping Website.ipynb  SentenceBoundaries.ipynb  Summarization.ipynb  Text prettify.ipynb  YoutubeAnalytics.ipynb  bert_analytics.ipynb  berthopic.ipynb  berthopic.ipynb:Zone.Identifier  cda.ipynb  full_file.csv:Zone.Identifier  hugginface_model_access.ipynb  new_approcah.ipynb  test.npy  transctipts.rar
quint/: params.py
quint/api/: fast.py
scripts/: chunk_paragraphs.py  clone_github_code.sh  deploy.sh  install_nvidia_driver.sh  serve_api.py
tests/: test_chunking.py  test_jax_device.py  test_streaming_chunking.py  test_youtube_downloader.py
(+94 files in other folders)
