# Build backend + tooling config. Package metadata lives in setup.py and
# dependencies in requirements.txt.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 88
# Notebooks are exploratory; skip them.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
# Mirror ruff's default rule set explicitly so CI is deterministic across versions.
select = ["E4", "E7", "E9", "F"]
